Apply appropriate styles base on data.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
 @defer {
   <app-watchlist>
-
   </app-watchlist>
 }
 @loading (minimum 1s) {
-  <loading></loading>
+  <loading>
+  </loading>
 }
-<!--@placeholder (minimum 3s) {-->
-<!--  <placeholder/>-->
-
-<!--}-->
