--- a/src/app/components/watchlist/watchlist.component.scss
+++ b/src/app/components/watchlist/watchlist.component.scss
@@ -1,30 +1,10 @@
-.table-update {
-  padding: 1rem 2rem;
-
-  .table-update__header {
-    h2 {
-      border-bottom: 1px solid #33b27c;
-      color: #33b27c;
-      font-family: 'Roboto', sans-serif;
-      margin-bottom: 1rem;
-      padding-bottom: 0.5rem;
-    }
-
-    margin-bottom: 2rem;
-  }
-}
-
-.table-update__footer {
-  margin: 1.5rem 0;
-
-  button {
-    width: 100%;
-  }
-}
-
 .table {
-  border: solid 1px  #33b27c;
-  height: 420px;
+  h4 {
+    padding: 15px;
+    color: #5a83ac;
+  }
+  border: solid 1px  #5a83ac;
+  height: 500px;
 }
 
 .icon {
@@ -98,4 +78,27 @@
   &:focus, &:hover{
   }
 }
+
+.table-update {
+  padding: 1rem 2rem;
+
+  .table-update__header {
+    h5 {
+      border-bottom: 1px solid #5a83ac;
+      color: #5a83ac;
+      font-family: 'Roboto', sans-serif;
+      margin-bottom: 1rem;
+      padding-bottom: 0.5rem;
+    }
+
+    margin-bottom: 2rem;
+  }
+}
+
+.table-update__footer {
+  button {
+    width: 100%;
+  }
+}
+
 
